RESOLVED FIXED126074
http/tests/misc/object-image-error.html asserts
https://bugs.webkit.org/show_bug.cgi?id=126074
Summary http/tests/misc/object-image-error.html asserts
Antti Koivisto
Reported 2013-12-20 11:28:44 PST
http://build.webkit.org/results/Apple%20Mavericks%20Debug%20WK2%20(Tests)/r160914%20(1133)/http/tests/misc/object-image-error-crash-log.txt ASSERTION FAILED: !child->renderer() || current.shadowRoot() || current.isInsertionPoint() /Volumes/Data/slave/mavericks-debug/build/Source/WebCore/style/StyleResolveTree.cpp(441) : void WebCore::Style::attachChildren(WebCore::ContainerNode &) 1 0x11352e780 WTFCrash 2 0x1146601fc WebCore::Style::attachChildren(WebCore::ContainerNode&) 3 0x11465f8ae WebCore::Style::attachRenderTree(WebCore::Element&, WTF::PassRefPtr<WebCore::RenderStyle>) 4 0x11465efc9 WebCore::Style::resolveLocal(WebCore::Element&, WebCore::Style::Change) 5 0x11465ebe0 WebCore::Style::resolveTree(WebCore::Element&, WebCore::Style::Change) 6 0x11465eda0 WebCore::Style::resolveTree(WebCore::Element&, WebCore::Style::Change) 7 0x11465eda0 WebCore::Style::resolveTree(WebCore::Element&, WebCore::Style::Change) 8 0x11465f6e8 WebCore::Style::resolveTree(WebCore::Document&, WebCore::Style::Change) 9 0x11496e716 WebCore::Document::recalcStyle(WebCore::Style::Change) 10 0x11496af0f WebCore::Document::updateStyleIfNeeded() 11 0x11496eba5 WebCore::Document::implicitClose()
Attachments
patch (3.29 KB, patch)
2013-12-20 11:51 PST, Antti Koivisto
kling: review+
Antti Koivisto
Comment 1 2013-12-20 11:51:21 PST
WebKit Commit Bot
Comment 2 2013-12-20 11:53:52 PST
Attachment 219777 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCore/html/HTMLPlugInImageElement.cpp', u'Source/WebCore/html/HTMLPlugInImageElement.h', '--commit-queue']" exit_code: 1 ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Andreas Kling
Comment 3 2013-12-20 11:57:27 PST
Comment on attachment 219777 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=219777&action=review r=me > Source/WebCore/html/HTMLPlugInImageElement.cpp:256 > + queuePostAttachCallback(&HTMLPlugInImageElement::startLoadingImageCallback, this); This deserves a comment.
Antti Koivisto
Comment 4 2013-12-20 12:46:26 PST
Note You need to log in before you can comment on or make changes to this bug.