http/tests/misc/object-image-error.html asserts https://bugs.webkit.org/show_bug.cgi?id=126074

Reviewed by Andreas Kling.

* html/HTMLPlugInImageElement.cpp:
(WebCore::HTMLPlugInImageElement::didAttachRenderers):
(WebCore::HTMLPlugInImageElement::updateWidgetCallback):
(WebCore::HTMLPlugInImageElement::startLoadingImage):
(WebCore::HTMLPlugInImageElement::startLoadingImageCallback):
* html/HTMLPlugInImageElement.h:

    Start image load from post-attach so we don't re-enter attach when image load fails synchronously.



Canonical link: https://commits.webkit.org/144044@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160920 268f45cc-cd09-0410-ab3c-d52691b4dbfc