Source/WebCore/html/HTMLPlugInImageElement.h
@@ -113,7 +113,9 @@ protected:
     String m_url;
     URL m_loadedUrl;
 
-    static void updateWidgetCallback(Node*, unsigned = 0);
+    static void updateWidgetCallback(Node*, unsigned);
+    static void startLoadingImageCallback(Node*, unsigned);
+
     virtual void didAttachRenderers() OVERRIDE;
     virtual void willDetachRenderers() OVERRIDE;
 
@@ -139,6 +141,7 @@ private:
     virtual void finishParsingChildren() OVERRIDE;
 
     void updateWidgetIfNecessary();
+    void startLoadingImage();
 
     virtual void updateSnapshot(PassRefPtr<Image>) OVERRIDE;
     virtual void dispatchPendingMouseClick() OVERRIDE;
